# Agentic-KVM

./: .gitignore  Dockerfile  README.md  pyproject.toml
docker/supermicro-ikvm-bridge/: Dockerfile  entrypoint.sh
docs/: kali-rpi4-pikvm-port.md  supermicro-ikvm-bridge.md  supermicro-ipmi.md  supermicro-legacy-web.md
recipes/: boot_from_iso.md
src/pikvm_mcp/: __init__.py  audit.py  bridge.py  client.py  config.py  ipmi_client.py  server.py  supermicro_client.py
src/pikvm_mcp/tools/: __init__.py  atx.py  hid.py  ipmi.py  msd.py  streamer.py  supermicro.py  supermicro_bridge.py
tests/: conftest.py  test_atx.py  test_audit.py  test_bridge.py  test_cert_pinning.py  test_client.py  test_config.py  test_hid.py  test_ipmi_client.py  test_ipmi_tools.py  test_msd.py  test_server.py  test_streamer.py  test_supermicro_bridge_tools.py  test_supermicro_client.py  test_supermicro_tools.py
tests/integration/: conftest.py  test_live_atx_actions.py  test_live_hid_actions.py  test_live_ipmi_readonly.py  test_live_msd_actions.py  test_live_readonly.py  test_live_supermicro_readonly.py
