[project]
name = "pikvm-mcp"
version = "0.1.0"
description = "Agentic-KVM: FastMCP server giving AI agents bare-metal control via PiKVM"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Mahdi Hedhli" }]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
]

[project.scripts]
pikvm-mcp = "pikvm_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pikvm_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: live PiKVM integration tests, skipped unless PIKVM_INTEGRATION=1",
    "hid_action: live HID action tests, skipped unless PIKVM_ALLOW_HID_ACTIONS=1",
    "msd_action: live MSD action tests, skipped unless PIKVM_ALLOW_MSD_ACTIONS=1",
    "atx_action: live ATX action tests, skipped unless PIKVM_ALLOW_ATX_ACTIONS=1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "python-dotenv>=1.0",
    "respx>=0.22",
    "ruff>=0.8",
]
